# Product-Search

./: Dockerfile  README.md  pyproject.toml
app/: config.py  logger.py  main.py  models.py  prompting.py  utils.py
outputs/: egypt_region_output.json  india_region_output.json  us_output.json  us_region_output.json
