[tool.poetry]
name = "productshop"
version = "0.1.0"
description = ""
authors = ["SK"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.116.0"
httpx = "^0.28.1"
uvicorn = "^0.35.0"
python-dotenv = "^1.1.1"
pydantic-settings = "^2.10.1"
pydantic = "^2.11.7"
loguru = "^0.7.3"
sentence-transformers = "^5.0.0"
langchain = "^0.3.26"
langchain-community = "^0.3.27"
langchain-openai = "^0.3.27"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
